estrutura html pronta com css

--- a/index.html
+++ b/index.html
@@ -1,11 +1,35 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;500;700&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DevSorteio</title>
+    <link rel="shortcut icon" href="assets/favicon-anderdev-cinza-verde.ico">
+    <link rel="stylesheet" href="style.css" />
 </head>
+
 <body>
-    
+    <header>
+        <img class="dado" src="./assets/sort 1.png"
+            alt="Imagem com um dado vemelho, logo abaixo escrito na cor branca 'DevSorteio'">
+    </header>
+
+    <main>
+        <label>Sortear um número
+            <input class="input-left" placeholder="entre" type="number">
+            <input class="input-right" placeholder="e" type="number">
+        </label>
+
+        <div class="botao-sorteio">
+            <button>Sortear</button>
+        </div>
+    </main>
+
+    <script src="script.js"></script>
 </body>
+
 </html>
