finalização do projeto com logica aplicada

--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
 
     <main>
         <label>Sortear um número
-            <input class="input-left" placeholder="entre" type="number">
-            <input class="input-right" placeholder="e" type="number">
+            <input class="input1" placeholder="entre" type="number">
+            <input class="input2" placeholder="e" type="number">
         </label>
 
         <div class="botao-sorteio">
-            <button>Sortear</button>
+            <button onclick="geradorNumero()">Sortear</button>
         </div>
     </main>
 
