mudanças no designer e readme

--- a/index.html
+++ b/index.html
@@ -14,14 +14,18 @@
 
 <body>
     <header>
-        <img class="dado" src="./assets/sort 1.png"
+        <img class="dado" src="./assets/dado.png"
             alt="Imagem com um dado vemelho, logo abaixo escrito na cor branca 'DevSorteio'">
     </header>
 
     <main>
         <label>Sortear um número
-            <input class="input1" placeholder="entre" type="number">
-            <input class="input2" placeholder="e" type="number">
+            <label> Entre
+            <input class="input1" placeholder="Digite seu número aqui" type="number">
+            </label>
+            <label> E
+            <input class="input2" placeholder="Digite seu número aqui" type="number">
+            </label>
         </label>
 
         <div class="botao-sorteio">
