--- a/index.html
+++ b/index.html
@@ -33,6 +33,13 @@
         </div>
     </main>
 
+    <div id="custom-alert" class="hidden">
+        <div id="alert-content">
+            <p id="alert-message"></p>
+            <button id="close-alert">X</button>
+        </div>
+    </div>    
+
     <script src="script.js"></script>
 </body>
 
